# impresso-pipelines

./: .env.example  .gitignore  CONTRIBUTING.md  LOCAL_TESTING.md  Makefile  README.md  README_adclassifier.md  README_langident.md  README_ldatopics.md  README_newsagencies.md  README_ocrqa.md  README_oneclassadclassifier.md  README_solrnormalization.md  REAMDE_ocrqa.md  UV_MIGRATION.md  conftest.py  output.jsonl  pyproject.toml  run_tests.sh  test.py
.github/workflow/: python-publish-test.yml  python-publish.yml
.github/workflows/: python-publish.yml  qa.yml
impresso_pipelines/adclassifier/: adclassifier_pipeline.py
impresso_pipelines/langident/: README.md  langident_pipeline.py
impresso_pipelines/ldatopics/: README.md  SPACY.py  mallet_pipeline.py
impresso_pipelines/mallet/: SPACY.py  __init__.py  config.py  input_reader.py  language_inferencer.py  mallet2topic_assignment_jsonl.py  mallet_pipeline.py  mallet_topic_inferencer.py  mallet_vectorizer.py  output.mallet  test.json  test.py  tm-de-all-v2.0.config.json
impresso_pipelines/mallet/mallet_pipes/: tm-de-all-v2.0.pipe  tm-de-all-v2.0.topic_model_topic_description.jsonl.bz2
impresso_pipelines/mallet/old/: input_reader.py  language_inferencer.py  mallet_inferencer.py  mallet_vectorizer.py
impresso_pipelines/nerlong/: __init__.py  nerlong_pipeline.py
impresso_pipelines/newsagencies/: __init__.py  newsagencies_pipeline.py
impresso_pipelines/ocrqa/: README.md  __init__.py  ocrqa_pipeline.py
impresso_pipelines/oneclassadclassifier/: __init__.py  oneclassadclassifier_pipeline.py
impresso_pipelines/solrnormalization/: __init__.py  lang_configs.py  solrnormalization_pipeline.py
tests/adclassifier/: __init__.py  test_adclassifier_pipeline.py
tests/langident/: test_langident_pipeline.py
tests/ldatopics/: test_ldatopics_pipeline.py  test_mallet_pipeline.py
tests/newsagencies/: test_newsagenies_pipeline.py
tests/ocrqa/: test_ocrqa_pipeline.py
tests/oneclassadclassifier/: __init__.py  test_oneclassadclassifier_pipeline.py
tests/solrnormalization/: test_solrnormalization_pipeline.py
