[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impresso_pipelines"
version = "1.2.0"
description = "A custom package for language identification subpackage and ocr QA score calculation subpackage (imitating pipelines)"
authors = [{ name = "Glebs Vinarskis", email = "gleb.vinarskis@gmail.com" }]
requires-python = ">=3.7"
dependencies = ["cython",
      "pybloomfiltermmap3",
      "huggingface_hub",
      "floret"]


[project.urls]
Homepage = "https://github.com/impresso/impresso-pipelines"
