[tool.poetry]
name = "impresso-pipelines"
version = "0.4.6.14"
description = "A custom package containing multiple pipelines simplifying reproducibility of impresso steps"
authors = ["Glebs Vinarskis <gleb.vinarskis@gmail.com>"]
readme = "README.md"

packages = [
    { include = "impresso_pipelines" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cython = "*"
numpy = "~1.26"
huggingface_hub = { version = "*", optional = true }
floret = { version = "*", optional = true }
pybloomfilter3 = { version = "*", optional = true }
pysolr = "*"

jpype1 = { version = "~1.6", optional = true }
smart_open = { version = "~6.3", optional = true }
boto3 = { version = "~1.35", optional = true }
python-dotenv = { version = "~1.0", optional = true }
spacy = { version = "~3.8", optional = true }
jsonschema = { version = "~4.23", optional = true }

transformers = { version = "~4.49", optional = true }
torch = { version = "~2.3", optional = true }
torchvision = { version = "~0.18", optional = true }

[tool.poetry.urls]
homepage = "https://github.com/impresso/impresso-pipelines"

[tool.poetry.extras]
langident = ["huggingface_hub", "floret"]
ocrqa = ["pybloomfilter3", "huggingface_hub", "floret"]
ldatopics = ["huggingface_hub", "floret", "jpype1", "smart_open", "boto3", "python-dotenv", "spacy", "jsonschema"]
newsagencies = ["transformers", "torch", "torchvision"]
solrnormalization = ["jpype1", "huggingface_hub", "floret", "pysolr"]
all = ["pybloomfilter3", "huggingface_hub", "floret", "jpype1", "smart_open", "boto3", "python-dotenv", "spacy", "transformers", "torch", "jsonschema"]

[tool.poetry.group.dev.dependencies]
pybloomfilter3 = "*"
pytest = "~7.2"
jsonschema = "~4.23"
pytest-lazy-fixture = "~0.6"
torch = "~2.3"
transformers = "~4.49"
flake8 = "~6.0"
mypy = "~1.2"
pytest-cov = "~4.0"
jpype1 = "~1.6"
huggingface_hub = "*"
floret = "*"
pysolr = "~3.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
